--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               <div class="icon">
                 <i class="bi bi-activity"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a  class="stretched-link">
                 <h3>Desarrollo de Aplicaciones Móviles</h3>
               </a>
               <p>Creamos aplicaciones nativas para Android que son rápidas, seguras y altamente 
@@ -309,7 +309,7 @@
               <div class="icon">
                 <i class="bi bi-broadcast"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a  class="stretched-link">
                 <h3>Desarrollo de Software a Medida</h3>
               </a>
               <p>Diseñamos y desarrollamos software adaptado a las necesidades 
@@ -322,7 +322,7 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a  class="stretched-link">
                 <h3>Consultoría Tecnológica</h3>
               </a>
               <p>Ofrecemos asesoramiento experto para ayudarte a elegir las mejores tecnologías y enfoques para tus proyectos. 
@@ -335,12 +335,12 @@
               <div class="icon">
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a  class="stretched-link">
                 <h3>Desarrollo Web</h3>
               </a>
               <p>Diseñamos y desarrollamos sitios web y aplicaciones web que son atractivos, funcionales y optimizados para una
                  experiencia de usuario superior en cualquier dispositivo.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -349,12 +349,12 @@
               <div class="icon">
                 <i class="bi bi-calendar4-week"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a  class="stretched-link">
                 <h3>Automatización de Procesos</h3>
               </a>
               <p>mplementamos soluciones de automatización que eliminan tareas repetitivas, reducen 
                 errores y aumentan la productividad, permitiendo que tu equipo se enfoque en lo que realmente importa.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a  class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -368,7 +368,7 @@
               </a>
               <p>Proporcionamos mantenimiento regular y soporte técnico para asegurar que tus aplicaciones y software 
                 funcionen de manera óptima en todo momento. Nos encargamos de actualizaciones, correcciones y mejoras continuas.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a  class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -404,8 +404,8 @@
               <div class="portfolio-info">
                 <h4>Control Fácil</h4>
                 <p>Software de gestion y ventas</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a  title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -424,8 +424,8 @@
               <div class="portfolio-info">
                 <h4>Pulso 365</h4>
                 <p>Consultoría Financiera</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://pulso-consulting.vercel.app/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://pulso-consulting.vercel.app/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -434,8 +434,8 @@
               <div class="portfolio-info">
                 <h4>Taxímetro Fácil</h4>
                 <p>Taxímetro Digital</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -446,8 +446,8 @@
               <div class="portfolio-info">
                 <h4>Games Servicios Técnicos</h4>
                 <p>Pagina de mantenimiento en sistemas</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://gamesserviciostecnicos.com.ar/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://gamesserviciostecnicos.com.ar/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -456,8 +456,8 @@
               <div class="portfolio-info">
                 <h4>Lista To Do/h4>
                 <p>Lista de Tareas Online y Gratuita</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://labordetrabajo.github.io/todolist3/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://labordetrabajo.github.io/todolist3/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -468,8 +468,8 @@
               <div class="portfolio-info">
                 <h4>Nuevo Aluminio</h4>
                 <p>Landing Page, fábrica de aberturas</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://labordetrabajo.github.io/NuevoAluminio/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://labordetrabajo.github.io/NuevoAluminio/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -503,10 +503,8 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/sebastianr93" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/sebastian-agustin-rodriguez/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -521,15 +519,13 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/labordetrabajo/"target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/lucas-laborde-trabajo/"target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Lucas Laborde</h4>
-                <span>Desarrollador principal y lider de proyectos</span>
+                <span>Desarrollador principal y Lider de proyectos</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -659,27 +655,28 @@
           <div class="col-lg-6 ">
             <div class="row gy-4">
 
-              <div class="col-lg-12">
+             <!--  <div class="col-lg-12">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>-->
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
-                  <h3>Teléfono (AR +54)</h3>
-                  <p>1562631035</p>
+                  <h3 style="color: #13a753">Teléfono (AR +54)</h3>
+                  <p style="color: #13a753">1562631035</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
-                  <h3>Email</h3>
-                  <p>lucaslaborde.trabajo@gmail.com</p>
+                  <h3 style="color: #13a753;">Email</h3>
+
+                  <p style="color: #13a753;">lucaslaborde.trabajo@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -731,11 +728,7 @@
       <h3 class="sitename">[S.P]</h3>
       <p>Soluciones Programables</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/lucas-laborde-trabajo/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="copyright">
         <span>Copyright</span> <strong class="px-1 sitename">S.P</strong> <span>All Rights Reserved</span>
