--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <script>
-    $(document).ready(function() {
+$(document).ready(function() {
    $("#contact-form").submit(function(event) {
       // Evitar el comportamiento por defecto del formulario
       event.preventDefault();
@@ -52,13 +52,15 @@
          method: "POST",
          data: formData,
          dataType: "json",
-         success: function() {
+         success: function(response) {
             // Ocultar la animación de "loading"
             $(".loading").hide();
 
             // Mostrar el mensaje de éxito y ocultar el de error
-            $(".sent-message").show();
-            $(".error-message").hide();
+            if (response.ok) {
+               $(".sent-message").show();
+               $(".error-message").hide();
+            }
 
             // Limpiar los campos del formulario
             $("input#sender_name").val("");
