--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@ $(document).ready(function() {
             // Ocultar la animación de "loading"
             $(".loading").hide();
 
-            // Mostrar el mensaje de error y ocultar el de éxito
-            $(".error-message").show();
-            $(".sent-message").hide();
+            // Mostrar el mensaje de error y ocultar el de éxi
           
          }
       });
