--- a/index.html
+++ b/index.html
@@ -737,6 +737,9 @@ $(document).ready(function() {
                   <div class="col-md-6">
                      <input type="text" name="name" id="sender_name" class="form-control" placeholder="NOMBRE" required="">
                   </div>
+                      <div class="col-md-6">
+                     <input type="text" name="name" id="sender_name" class="form-control" placeholder="ASUNTO" required="">
+                  </div>
                   <div class="col-md-6 ">
                      <input type="email" class="form-control" id="sender_email" name="email" placeholder="CORREO" required="">
                   </div>
