--- a/index.html
+++ b/index.html
@@ -732,29 +732,29 @@ $(document).ready(function() {
           </div>
 
           <div class="col-lg-6">
-            <form id="contact-form" action="https://formspree.io/f/xeqwvvne" method="POST" class="php-email-form">
-               <div class="row gy-4">
-                  <div class="col-md-6">
-                     <input type="text" name="name" id="sender_name" class="form-control" placeholder="NOMBRE" required="">
-                  </div>
-                      <div class="col-md-6">
-                     <input type="text" name="name" id="sender_name" class="form-control" placeholder="ASUNTO" required="">
-                  </div>
-                  <div class="col-md-6 ">
-                     <input type="email" class="form-control" id="sender_email" name="email" placeholder="CORREO" required="">
-                  </div>
-                  <div class="col-md-12">
-                     <textarea class="form-control" name="message" id="message_content" rows="4" placeholder="MENSAJE" required=""></textarea>
-                  </div>
-                  <div class="col-md-12 text-center">
-                     <div class="loading">Loading</div>
-                     <div class="error-message"></div>
-                     <div class="sent-message">Su Mensaje fue enviado , Gracias !</div>
-                     <button type="submit">Enviar Mensaje</button>
-                  </div>
-               </div>
-            </form>
+   <form id="contact-form" action="https://formspree.io/f/xeqwvvne" method="POST" class="php-email-form">
+      <div class="row gy-4">
+         <div class="col-md-6">
+            <input type="text" name="name" id="sender_name" class="form-control" placeholder="NOMBRE" required="">
          </div>
+         <div class="col-md-6">
+            <input type="text" name="subject" id="subject" class="form-control" placeholder="ASUNTO" required="">
+         </div>
+         <div class="col-md-6">
+            <input type="email" class="form-control" id="sender_email" name="email" placeholder="CORREO" required="">
+         </div>
+         <div class="col-md-12">
+            <textarea class="form-control" name="message" id="message_content" rows="4" placeholder="MENSAJE" required=""></textarea>
+         </div>
+         <div class="col-md-12 text-center">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Su Mensaje fue enviado, ¡Gracias!</div>
+            <button type="submit">Enviar Mensaje</button>
+         </div>
+      </div>
+   </form>
+</div>
          
 
         </div>
